[package]
name = "packet-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
dis-rs = "0.8.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
